generated/manifests/prod-home/gateway/ReferenceGrant-gateway-jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-jellyfin
  namespace: jellyfin
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
      name: jellyfin
