generated/manifests/prod-home/gateway/ReferenceGrant-gateway-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-prowlarr
  namespace: media
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
      name: prowlarr
