generated/manifests/prod-home/gateway/Gateway-household.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: household
  namespace: gateway
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: household
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: gateway-tls
        mode: Terminate
