generated/manifests/prod-home/gateway/HTTPRoute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: gateway
spec:
  hostnames:
    - argocd.plus2.danielvicory.dev
    - argocd.backup.plus2.danielvicory.dev
  parentRefs:
    - name: household
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
      filters:
        - requestHeaderModifier:
            remove:
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Auth-Request-User
              - X-Auth-Request-Email
              - Remote-User
              - Forwarded
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 15s
        request: 15s
