generated/manifests/prod-home/gateway/HTTPRoute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: gateway
spec:
  hostnames:
    - grafana.plus2.danielvicory.dev
    - grafana.backup.plus2.danielvicory.dev
  parentRefs:
    - name: household
  rules:
    - backendRefs:
        - name: monitoring-grafana
          namespace: monitoring
          port: 80
      filters:
        - requestHeaderModifier:
            remove:
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Auth-Request-User
              - X-Auth-Request-Email
              - Remote-User
              - Forwarded
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
