generated/manifests/prod-home/gateway/HTTPRoute-idm.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: idm
  namespace: gateway
spec:
  hostnames:
    - idm.plus2.danielvicory.dev
    - idm.backup.plus2.danielvicory.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: household
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kanidm
          namespace: identity
          port: 443
          weight: 1
      filters:
        - requestHeaderModifier:
            remove:
              - X-Real-IP
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Auth-Request-User
              - X-Auth-Request-Email
              - Remote-User
              - Forwarded
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 15s
        request: 15s
