generated/manifests/prod-home/gateway/HTTPRoute-immich.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: gateway
spec:
  hostnames:
    - immich.plus2.danielvicory.dev
    - immich.backup.plus2.danielvicory.dev
  parentRefs:
    - name: household
  rules:
    - backendRefs:
        - name: immich-server
          namespace: immich
          port: 2283
      filters:
        - requestHeaderModifier:
            remove:
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Auth-Request-User
              - X-Auth-Request-Email
              - Remote-User
              - Forwarded
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
