generated/manifests/prod-home/gateway/HTTPRoute-jellyfin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: gateway
spec:
  hostnames:
    - jellyfin.plus2.danielvicory.dev
    - jellyfin.backup.plus2.danielvicory.dev
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: household
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          namespace: jellyfin
          port: 8096
          weight: 1
      filters:
        - requestHeaderModifier:
            remove:
              - X-Real-IP
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Auth-Request-User
              - X-Auth-Request-Email
              - Remote-User
              - Forwarded
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
        request: 0s
