generated/manifests/prod-home/gateway/HTTPRoute-sabnzbd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
  namespace: gateway
spec:
  hostnames:
    - sabnzbd.plus2.danielvicory.dev
    - sabnzbd.backup.plus2.danielvicory.dev
  parentRefs:
    - name: household
  rules:
    - backendRefs:
        - name: sabnzbd
          namespace: media
          port: 8080
      filters:
        - requestHeaderModifier:
            remove:
              - X-Forwarded-User
              - X-Forwarded-Email
              - X-Auth-Request-User
              - X-Auth-Request-Email
              - Remote-User
              - Forwarded
          type: RequestHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
