generated/manifests/prod-home/gateway/NetworkPolicy-gateway-argocd-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-argocd-backend-ingress
  namespace: argocd
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: household
              gateway.envoyproxy.io/owning-gateway-namespace: gateway
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
      app.kubernetes.io/name: argocd-server
  policyTypes:
    - Ingress
