generated/manifests/prod-home/gateway/NetworkPolicy-gateway-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-backend-ingress
  namespace: argocd
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: household
              gateway.envoyproxy.io/owning-gateway-namespace: gateway
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-backend-ingress
  namespace: identity
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: identity
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: household
              gateway.envoyproxy.io/owning-gateway-namespace: gateway
  podSelector: {}
  policyTypes:
    - Ingress
