generated/manifests/prod-home/gateway/NetworkPolicy-gateway-jellyfin-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gateway-jellyfin-backend-ingress
  namespace: jellyfin
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: jellyfin
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gateway
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-name: household
              gateway.envoyproxy.io/owning-gateway-namespace: gateway
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: jellyfin
      app.kubernetes.io/name: jellyfin
  policyTypes:
    - Ingress
